test/haskell2010/conformance/negative/record-update-non-record.hs
module Main where

data Person = Person { age :: Int }

main = (1 :: Int) { age = 2 }
